base flight control & simple pfd

--- a/Packages/com.vrcau.vau320neo.fdmi/Runtime/com.vrcau.vau320neo.fdmi.asmdef
+++ b/Packages/com.vrcau.vau320neo.fdmi/Runtime/com.vrcau.vau320neo.fdmi.asmdef
@@ -1,15 +1,21 @@
 {
-  "name": "com.vrcau.vau320neo.fdmi",
-  "references": [
-    "VRC.SDK3",
-    "VRC.SDKBase"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "autoReferenced": true,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "defineConstraints": [],
-  "optionalUnityReferences": []
+    "name": "com.vrcau.vau320neo.fdmi",
+    "rootNamespace": "",
+    "references": [
+        "VRC.SDK3",
+        "VRC.SDKBase",
+        "UdonSharp.Runtime",
+        "tech.gyoku.FDMi.core",
+        "tech.gyoku.FDMi.aerodynamics",
+        "tech.gyoku.FDMi.avionics"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
