--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.llcheesell.led_screen_shader": "https://github.com/llcheesell/LEDScreenShader.git?path=/Assets/LEDScreenShader#v0.1.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.7",
@@ -11,6 +12,7 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.mathematics": "1.3.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.shadergraph": "14.0.8",
     "com.unity.test-framework": "1.4.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
